--- a/index.html
+++ b/index.html
@@ -44,26 +44,97 @@
         <a href="#" target="_blank">QUERO TURISTAR</a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="sobre">
+        <div class="sobre-container">
+          <div class="row">
+            <div class="col-lg-4">
+              <img
+                src="./images/equipe.png"
+                class="bd-placeholder-img rounded-circle"
+                width="140"
+                height="140"
+                role="img"
+                aria-label="Placeholder: 140x140"
+                preserveAspectRatio="xMidYMid slice"
+                focusable="false"
+              ></img>
+              <h2 class="fw-normal">Nossa história</h2>
+              <p>
+                A Tudo Turismo começou sua jornada com um sonho: conectar pessoas a experiências inesquecíveis. Desde nossos primeiros passos, temos nos dedicado a oferecer serviços de turismo personalizados, atendendo a cada necessidade e desejo dos nossos clientes. Nossa paixão por explorar o mundo nos inspira a criar aventuras únicas e memoráveis para você, amigos e família.
+              </p>
+              <!-- <p>
+                <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              </p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+              <img
+                src="./images/turistas2.jpg"
+                class="bd-placeholder-img rounded-circle"
+                width="140"
+                height="140"
+                role="img"
+                aria-label="Placeholder: 140x140"
+                preserveAspectRatio="xMidYMid slice"
+                focusable="false"
+              ></img>
+              <h2 class="fw-normal">Nossa missão</h2>
+              <p>
+                Nossa missão é transformar sonhos de viagem em realidade. Comprometidos com a excelência, buscamos proporcionar experiências únicas e memoráveis, enquanto garantimos segurança e comodidade. Estamos sempre prontos para abrir portas para novas aventuras e momentos inesquecíveis.
+              </p>
+              <!-- <p>
+                <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              </p> -->
+            </div>
+            <!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+              <img
+                src="./images/turistas4.jpg"
+                class="bd-placeholder-img rounded-circle"
+                width="140"
+                height="140"
+                role="img"
+                aria-label="Placeholder: 140x140"
+                preserveAspectRatio="xMidYMid slice"
+                focusable="false"
+              ></img>
+              <h2 class="fw-normal">Serviços oferecidos</h2>
+              <p>
+                Na Tudo Turismo, oferecemos uma gama completa de serviços para tornar sua viagem inesquecível. Desde pacotes de turismo personalizados até passeios guiados, cuidamos de todos os detalhes para você. Além disso, nosso serviço de câmbio garante que você esteja sempre preparado para qualquer aventura.
+              </p>
+              <!-- <p>
+                <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              </p> -->
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
       integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/sticky.min.js"
       integrity="sha512-O5YCLUxCY2OBc4rfpnKUIgE4LGuCiW8CrJ7ty4hvkBAAKUOnlbomEFWd3a6ruRnFvO3LG2wiaGiJ1heOvdppvA=="
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+
     <script src="./script.js"></script>
   </body>
 </html>
