section Porque viajar e importante configuration

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="menu-principal">
           <li><a href="#">Home</a></li>
           <li><a href="#">Sobre</a></li>
-          <li><a href="#">Turismo</a></li>
+          <li><a href="#">Porque viajar é importante?</a></li>
           <li><a href="#">Serviços</a></li>
           <li><a href="#">Contato</a></li>
         </ul>
@@ -58,10 +58,15 @@
                 aria-label="Placeholder: 140x140"
                 preserveAspectRatio="xMidYMid slice"
                 focusable="false"
-              ></img>
+              />
               <h2 class="fw-normal">Nossa história</h2>
               <p>
-                A Tudo Turismo começou sua jornada com um sonho: conectar pessoas a experiências inesquecíveis. Desde nossos primeiros passos, temos nos dedicado a oferecer serviços de turismo personalizados, atendendo a cada necessidade e desejo dos nossos clientes. Nossa paixão por explorar o mundo nos inspira a criar aventuras únicas e memoráveis para você, amigos e família.
+                A Tudo Turismo começou sua jornada com um sonho: conectar
+                pessoas a experiências inesquecíveis. Desde nossos primeiros
+                passos, temos nos dedicado a oferecer serviços de turismo
+                personalizados, atendendo a cada necessidade e desejo dos nossos
+                clientes. Nossa paixão por explorar o mundo nos inspira a criar
+                aventuras únicas e memoráveis para você, amigos e família.
               </p>
               <!-- <p>
                 <a class="btn btn-secondary" href="#">View details &raquo;</a>
@@ -78,10 +83,14 @@
                 aria-label="Placeholder: 140x140"
                 preserveAspectRatio="xMidYMid slice"
                 focusable="false"
-              ></img>
+              />
               <h2 class="fw-normal">Nossa missão</h2>
               <p>
-                Nossa missão é transformar sonhos de viagem em realidade. Comprometidos com a excelência, buscamos proporcionar experiências únicas e memoráveis, enquanto garantimos segurança e comodidade. Estamos sempre prontos para abrir portas para novas aventuras e momentos inesquecíveis.
+                Nossa missão é transformar sonhos de viagem em realidade.
+                Comprometidos com a excelência, buscamos proporcionar
+                experiências únicas e memoráveis, enquanto garantimos segurança
+                e comodidade. Estamos sempre prontos para abrir portas para
+                novas aventuras e momentos inesquecíveis.
               </p>
               <!-- <p>
                 <a class="btn btn-secondary" href="#">View details &raquo;</a>
@@ -98,16 +107,47 @@
                 aria-label="Placeholder: 140x140"
                 preserveAspectRatio="xMidYMid slice"
                 focusable="false"
-              ></img>
+              />
               <h2 class="fw-normal">Serviços oferecidos</h2>
               <p>
-                Na Tudo Turismo, oferecemos uma gama completa de serviços para tornar sua viagem inesquecível. Desde pacotes de turismo personalizados até passeios guiados, cuidamos de todos os detalhes para você. Além disso, nosso serviço de câmbio garante que você esteja sempre preparado para qualquer aventura.
+                Na Tudo Turismo, oferecemos uma gama completa de serviços para
+                tornar sua viagem inesquecível. Desde pacotes de turismo
+                personalizados até passeios guiados, cuidamos de todos os
+                detalhes para você. Além disso, nosso serviço de câmbio garante
+                que você esteja sempre preparado para qualquer aventura.
               </p>
               <!-- <p>
                 <a class="btn btn-secondary" href="#">View details &raquo;</a>
               </p> -->
             </div>
           </div>
+        </div>
+      </section>
+      <section class="viajar">
+        <h2>Porque viajar é importante?</h2>
+        <div class="viajar-container">
+          <div class="viajar-texto">
+            <p>
+              Viajar é essencial para expandir nossos horizontes e nos conectar
+              com o mundo de maneiras únicas. Cada viagem oferece a oportunidade
+              de descobrir novas culturas, culinárias, paisagens e perspectivas.
+              Além disso, sair da rotina diária revigora a mente e o espírito,
+              promovendo bem-estar e crescimento pessoal. As experiências
+              vividas em novas localidades inspiram criatividade e inovação,
+              além de fortalecer laços com pessoas de diferentes origens. Viajar
+              também nos desafia a sair da zona de conforto, desenvolvendo
+              habilidades como resiliência e adaptabilidade. Não menos
+              importante, cria memórias valiosas que carregamos por toda a vida.
+              Na Tudo Turismo, acreditamos que cada viagem é uma nova história
+              esperando para ser vivida. 🌍✨
+            </p>
+          </div>
+          <div class="viajar-img">
+            <img src="./images/turistas1.jpg" alt="turistas" />
+          </div>
+        </div>
+        <div class="chamada">
+          <a href="#" target="_blank">QUERO TURISTAR</a>
         </div>
       </section>
     </main>
