section servicos oferecidos configuration

--- a/index.html
+++ b/index.html
@@ -150,6 +150,67 @@
           <a href="#" target="_blank">QUERO TURISTAR</a>
         </div>
       </section>
+      <section class="servicos">
+        <h2>Serviços oferecidos</h2>
+        <div class="servicos-container">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/imagem-turismo.jpg"
+                  class="card-img-top"
+                  alt="objetos de turismo"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Viagens e turismo</h5>
+                  <p class="card-text">
+                    Explore o mundo com nossos pacotes personalizados,
+                    planejados para oferecer experiências únicas e
+                    inesquecíveis. De destinos exóticos a clássicos, cuidamos de
+                    cada detalhe para você.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/cambio.jpg"
+                  class="card-img-top"
+                  alt="dolar"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Câmbio</h5>
+                  <p class="card-text">
+                    Oferecemos serviços de câmbio confiáveis e com ótimas taxas,
+                    para que você viaje tranquilo e seguro. Faça suas transações
+                    com facilidade e segurança, garantindo sempre o melhor
+                    valor.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card">
+                <img
+                  src="./images/visto.jpg"
+                  class="card-img-top"
+                  alt="visa escrito"
+                />
+                <div class="card-body">
+                  <h5 class="card-title">Visto</h5>
+                  <p class="card-text">
+                    Facilitamos o processo de obtenção de vistos, oferecendo
+                    suporte completo. Conte com nossa expertise para garantir
+                    que sua documentação esteja sempre em ordem e sem
+                    complicações.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
 
