added a testemonial section with AOS lib effect

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:wght@300;400;600&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -39,6 +40,7 @@
           <li><a href="#sobre">Sobre</a></li>
           <li><a href="#viajar">Porque viajar é importante?</a></li>
           <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#testemunhos">Testemunhos</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
@@ -53,7 +55,7 @@
       </div>  
       <div class="chamada primeiraChamada">
         <h1>Tudo Turismo</h1>
-        <h2>Viajar sempre é tudo de bom!</h2>
+        <h2>Viajar é sempre tudo de bom!</h2>
         <a href="#" target="_blank">QUERO TURISTAR</a>
       </div>
     </header>
@@ -224,6 +226,103 @@
           </div>
         </div>
       </section>
+      <section class="testemunhos" id="testemunhos">
+        <h2>O que os nossos clientes acham dos nossos serviços</h2>
+        <div class="testemunhos-container">
+          <div class="d-flex flex-column justify-content-center align-items-center text-center">
+            <div data-aos="fade-right" data-aos-duration="1500" class="centered-aos">
+              <div class="col-md-4 mb-5 mb-md-0 card-testemunho">
+                <div class="d-flex justify-content-center mb-4">
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp"
+                    class="rounded-circle shadow-1-strong" width="150" height="150" />
+                </div>
+                <h5 class="mb-3">Maria Silva</h5>
+                <h6 class="text-primary mb-3">São Paulo - SP</h6>
+                <p class="px-xl-3">
+                  "Minha experiência com a Tudo Turismo em Maceió foi simplesmente espetacular! Desde a recepção até os passeios paradisíacos, tudo foi organizado com muito carinho e profissionalismo. A equipe atendeu a todas as minhas expectativas e me proporcionou momentos inesquecíveis. Cada detalhe foi pensado para que minha viagem fosse perfeita. Recomendo de olhos fechados!"
+                </p>
+                <ul class="list-unstyled d-flex justify-content-center mb-0">
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star-half" class="estrela"></ion-icon>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div data-aos="fade-left" data-aos-duration="1500" class="centered-aos">
+              <div class="col-md-4 mb-5 mb-md-0 card-testemunho">
+                <div class="d-flex justify-content-center mb-4">
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(2).webp"
+                    class="rounded-circle shadow-1-strong" width="150" height="150" />
+                </div>
+                <h5 class="mb-3">Elisandra Marques</h5>
+                <h6 class="text-primary mb-3">Florianópolis - SC</h6>
+                <p class="px-xl-3">
+                  "Viajar para Paris com a Tudo Turismo foi uma experiência incrível! Desde o planejamento da viagem até a minha estadia, tudo foi impecável. A atenção aos detalhes e o cuidado da equipe fizeram toda a diferença. Me senti segura e aproveitei cada momento dessa cidade mágica. A Tudo Turismo tornou meu sonho de conhecer Paris uma realidade perfeita!"
+                </p>
+                <ul class="list-unstyled d-flex justify-content-center mb-0">
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1500" class="centered-aos">
+              <div class="col-md-4 mb-0 card-testemunho">
+                <div class="d-flex justify-content-center mb-4">
+                  <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(9).webp"
+                    class="rounded-circle shadow-1-strong" width="150" height="150" />
+                </div>
+                <h5 class="mb-3">João Pedro</h5>
+                <h6 class="text-primary mb-3">Bahia - BA</h6>
+                <p class="px-xl-3">
+                  "Nossa viagem em família para Nova York com a Tudo Turismo foi incrível! A agência cuidou de todos os detalhes, deixando-nos livres para curtir cada instante. As atrações recomendadas foram perfeitas para todas as idades, e nosso filho se divertiu muito. O suporte constante nos fez sentir seguros e acolhidos durante toda a viagem. Foi uma aventura memorável para toda a família!"
+                </p>
+                <ul class="list-unstyled d-flex justify-content-center mb-0">
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star" class="estrela"></ion-icon>
+                  </li>
+                  <li>
+                    <ion-icon name="star-outline" class="estrela"></ion-icon>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="contato">
       <div class="footer-container">
@@ -271,6 +370,10 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="./script.js"></script>
     <script>
       const swiper = new Swiper('.swiper-container', {
